# orb-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/easypanel/: compose.yml  docker-compose.yml
deploy/n8n/: orb-agent-ai-review.workflow.json
docs/: ESTADO_ATUAL.md  deploy-easypanel-github.md  deploy-n8n.md
docs/design-docs/: go-live-checklist.md  orb-strategy.md  orb-validation-checklist.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: fase-5-ui.md  (+10 more)
docs/product-specs/: agente-orb.md
scripts/: build_easypanel_zip.py  deploy-easypanel.ps1  doc_garden.py  generate_env_production.py  register-scheduled-task.ps1  scheduled-scan.ps1  scheduled_scan.py  setup-n8n.ps1  setup.ps1  sync-github-secrets.ps1  test-paper-alert.py  test-production-ops.py  test-setup-found.py  test-webhook.py  trigger-deploy-webhook.ps1  upload-easypanel-api.py  validate.ps1  verify-system.py
src/orb_agent/: main.py
tests/: conftest.py  test_audit.py  test_audit_rotation.py  test_backtest.py  test_broker.py  test_ccxt_data.py  test_doc_garden.py  test_golive_ops.py  test_live_gate.py  test_mem0.py  test_memory.py  test_metrics.py  test_observability.py  test_ohlcv_cache.py  test_orb.py  test_orb_rules.py  test_paper.py  test_parallel_scan.py  test_payloads.py  test_pipeline.py  test_scheduled_scan.py  test_smoke.py  test_telegram_messages.py  test_token_rotation.py  test_trade.py  test_ui_production.py  test_webhooks.py
(+41 files in other folders)
