[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orb-agent"
version = "0.1.0"
description = "Agente Opening Range Breakout com Harness Engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "ccxt>=4.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]
ui = ["streamlit>=1.40", "plotly>=5.0"]

[project.scripts]
orb-agent = "orb_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orb_agent"]

[tool.pytest.ini_options]
markers = ["integration: testes com rede (CCXT)"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"